2004-04-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gpcard.tex: Remove duplicated X11 terminal entry.

2004-04-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc: Fix description of default format being "% g"
	instead of "%g".
	
2004-04-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: New section "Gnuplot-defined variables". Reference
	function defined(x) from section "User-defined variables".

2004-04-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c: Correct the placement of rotated text to account
	for the difference in x and y coordinate scaling. This greatly
	improves the rendering of rotated text in enhanced text mode.

2004-04-22  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/axis.c (set_cbminmax): Don't bail out if cbrange is empty.
	Let the caller handle it by auto-extending the range, as usual.

	* src/command.c (read_line): Fix bug where growing the line buffer
	interfered with handling of backslash-newline continuations.

2004-04-21  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* demo/Makefile.am.in (check-noninteractive, check-interactive):
	keep the previous $PATH at the end of the one set for running the
	newly built, not yet installed gnuplot.  Needed so Cygwin binaries
	can find Cygwin1.dll, even if it's not installed in the Windows
	DLL path.

2004-04-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.texi: Regenerated.

	* docs/gnuplot.doc: Fixed missing leading blanks broken during URL
	updates.

	* docs/Makefile.in ($(srcdir)/gnuplot.texi): Fix missing blank in
	file copying rule.

2004-04-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm: Clear all I/O locks when X11_reset is called.
	This is a more generic fix for the problem addressed by the patch
	of 2004-04-13, and covers cases such as a remote X-server failing
	to respond. Even without this patch the connection will eventually