@@ -1,5 +1,5 @@
 /*
- * $Id: x11.trm,v 1.107 2004/04/17 20:50:25 sfeam Exp $
+ * $Id: x11.trm,v 1.108 2004/05/03 18:22:59 sfeam Exp $
  *
  */
 
@@ -618,6 +618,10 @@ AGAIN:
 				repeat_count));
 			}
 			return(GE_fontprops);
+		    }
+		    if (ge.type == GE_buttonrelease && paused_for_mouse) {
+			paused_for_mouse = FALSE;
+			return '\0';
 		    }
 		}
 	    }
